fixing featured buttons on mobile layout

--- a/src/components/Featured/Featured.component.scss
+++ b/src/components/Featured/Featured.component.scss
@@ -33,3 +33,21 @@
 .featured-buttons {
   max-width: 540px;
 }
+
+@media (max-width: 768px) {
+  .featured-container {
+    aspect-ratio: 3/1.1;
+  }
+  .featured-tile {
+    width: 90%;
+  }
+  .tile-logo img {
+    margin-bottom: 8px;
+  }
+  .featured-buttons {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+}
